--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "lucide-react": "^0.294.0",
